--- a/movies/src/App.css
+++ b/movies/src/App.css
@@ -91,9 +91,11 @@
 }
 .favorites-genre{
   padding: 3rem;
+  overflow: auto;
 }
 .favorites-table{
   padding: 3rem;
+  overflow: auto;
 }
 
 @media  screen and (max-width:400px) {
